<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uninstall_dialog_title">要删除“%s”吗？</string>
    <string name="uninstall_dialog_vice_title">删除此APP将同时删除其数据</string>
    <string name="uninstall_dialog_positive">删除APP</string>
    <string name="uninstall_dialog_negative">取消</string>
    <string name="add_dialog_positive">确认</string>
    <string name="add_dialog_negative">取消</string>
    <string name="add_dialog_title">添加（%s）</string>
    <string name="appmanagement_name">应用管理</string>
    <string name="clear_all">一键清除</string>
    <string name="no_recent_apps">最近无运行应用</string>
    <string name="download_pause">继续</string>
    <string name="download_downloading">下载中</string>
    <string name="download_fail">下载失败</string>
    <string name="download_installing">安装中</string>
    <string name="update_dialog_title">“%s”可更新</string>
    <string name="update_dialog_title_vice">是否下载安装最新版本应用？</string>
    <string name="update_dialog_warn">下次不再提醒</string>
    <string name="update_dialog_open">打开应用（%ss）</string>
    <string name="update_dialog_update">更新</string>
    <string name="appmanagement_clear_toast">已释放%s内存</string>
    <string name="folder_name">文件夹</string>
</resources>