<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="800dp"
    android:layout_height="550dp"
    android:orientation="vertical"
    android:background="@mipmap/choice_dialog_bg"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/update_dialog_title"
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:textColor="#FFFFFF"
        android:text="标题" />
    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:text="@string/update_dialog_title_vice"/>
    <LinearLayout
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/update_dialog_select_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_dialog_selector"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:textSize="24sp"
            android:textColor="#7C7C84"
            android:text="@string/update_dialog_warn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/update_dialog_open_tv"
            android:layout_width="228dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/dialog_positive_selector"
            android:text="@string/update_dialog_open"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/update_dialog_update_tv"
            android:layout_width="228dp"
            android:layout_height="74dp"
            android:layout_marginLeft="100dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/negative_choice_bg"
            android:text="@string/update_dialog_update"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="#ABD3E1"/>
    </LinearLayout>
</LinearLayout>