<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="800dp"
    android:layout_height="550dp"
    android:orientation="vertical"
    android:background="@mipmap/choice_dialog_bg"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@mipmap/icon_warning" />
    <TextView
        android:id="@+id/uninstall_dialog_title"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:text="标题"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:textColor="#7C7C84"
        android:text="@string/uninstall_dialog_vice_title"/>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/uninstall_dialog_positive_tv"
            android:layout_width="228dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/positive_choice_bg"
            android:text="@string/uninstall_dialog_positive"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/uninstall_dialog_negative_tv"
            android:layout_width="228dp"
            android:layout_height="74dp"
            android:layout_marginLeft="100dp"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/negative_choice_bg"
            android:text="@string/uninstall_dialog_negative"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="#ABD3E1"/>
    </LinearLayout>
</LinearLayout>