<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1900dp"
    android:layout_height="650dp"
    android:orientation="vertical"
    android:background="@mipmap/appmanagement_dialog_bg">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/close_iv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="120dp"
            android:src="@mipmap/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/appmanagement_name"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appmanage_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="100dp"
        android:orientation="horizontal" />
    <TextView
        android:id="@+id/warn_tv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:textSize="28sp"
        android:textColor="#fff"
        android:text="@string/no_recent_apps"/>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:visibility="gone"
            android:id="@+id/clear_tv"
            android:layout_width="228dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/dialog_positive_selector"
            android:text="@string/clear_all"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="#ABD3E1"/>
    </RelativeLayout>
</RelativeLayout>